# edufine_money_docsmake

./: .gitignore  README.md  pyproject.toml
.github/workflows/: windows-release.yml
apps/flutter_ui/: README.md  pubspec.yaml
apps/flutter_ui/lib/: main.dart
apps/flutter_ui/lib/models/: models.dart
apps/flutter_ui/lib/providers/: app_state.dart
apps/flutter_ui/lib/screens/: main_layout.dart  review_screen.dart  settings_screen.dart  upload_screen.dart
apps/flutter_ui/lib/services/: api_service.dart  update_service.dart  windows_dialogs.dart
apps/flutter_ui/lib/theme/: app_theme.dart
apps/flutter_ui/test/: update_service_test.dart  widget_test.dart
apps/flutter_ui/web/: index.html
apps/flutter_ui/windows/runner/: flutter_window.cpp  flutter_window.h  win32_window.cpp
backend/: run_api.py
backend/auto_money_doc/: __init__.py  config.py
backend/auto_money_doc/api/: __init__.py  server.py
backend/auto_money_doc/excel/: __init__.py  generator.py  template_mapper.py
backend/auto_money_doc/extraction/: __init__.py  gemini_client.py  prompts.py  schema.py  service.py  site_profiles.py
docs/: FUNCTION_SPEC_FOR_GEMINI.md  PRODUCT_QUESTIONS.md  SITE_PROFILE_RULES.md
tests/: test_excel_generator.py  test_extraction_prompts.py
